--- a/index.html
+++ b/index.html
@@ -91,5 +91,14 @@
             </a>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <a href="mailto:crockett.d.ford@gmail.com" class="footer-link">crockett.d.ford@gmail.com</a>
+        <ul class="social-list">
+            <li class="social-list__item"><a class="social-list__link" href="twitter.com">Twitter</a></li>
+            <li class="social-list__item"><a class="social-list__link" href="github.com">Github</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
