Set up css custom properties

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
     <script src="https://kit.fontawesome.com/eeba83654a.js" crossorigin="anonymous"></script>
 
+    <!--TODO Add google fonts here later-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
