basic intro styling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             Hi, I am <strong>Crockett Ford</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">.NET dev and tinkerer</p>
-        <img src="img/sandwich-profile.jpg" alt="a picture of Crockett eating a sandwich">
+        <img src="img/sandwich-profile.jpg" alt="a picture of Crockett eating a sandwich" class="intro__img">
     </section>
 
     <!-- About me -->
