--- a/index.html
+++ b/index.html
@@ -97,9 +97,12 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-        <a href="mailto:crockett.d.ford@gmail.com" class="footer-link"><i class="fa-regular fa-envelope">Email</i></a>
+    <footer class="footer">
+        
         <ul class="social-list">
+            <li class="social-list__item">
+                <a href="mailto:crockett.d.ford@gmail.com" class="social-list__link"><i class="fa-regular fa-envelope"></i></a>
+            </li>
             <li class="social-list__item">
                 <a class="social-list__link" href="https://twitter.com/_crockettford"><i class="fa-brands fa-x-twitter"></i></a>
             </li>
@@ -108,5 +111,8 @@
             </li>
         </ul>
     </footer>
+
+    <script src="js/index.js"></script>
+    
 </body>
 </html>
