added hamburger and smooth scrolling behavior

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <!-- My Work -->
-    <section class="my-work" id="Work">
+    <section class="my-work" id="work">
         <h2 class="section__title section__title--work">My work</h2>
         <p class="section__subtitle section__subtitle--work">The projects I'm most proud of</p>
     
@@ -113,6 +113,6 @@
     </footer>
 
     <script src="js/index.js"></script>
-    
+
 </body>
 </html>
