changing and starting to add project descriptions

--- a/index.html
+++ b/index.html
@@ -67,31 +67,37 @@
             <!--Portfolio Item 1-->
             <a href="#" class="portfolio__item">
                 <img src="img/portfolio-item-1.png" alt="Portfolio image" class="portfolio__img">
+                <div class="portfolio__description">TITLE</div>
             </a>
             
             <!--Portfolio Item 2-->
             <a href="#" class="portfolio__item">
                 <img src="img/portfolio-item-2.png" alt="Portfolio image" class="portfolio__img">
+                <div class="portfolio__description">TITLE</div>
             </a>
 
             <!--Portfolio Item 3-->
             <a href="#" class="portfolio__item">
                 <img src="img/portfolio-item-3.png" alt="Portfolio image" class="portfolio__img">
+                <div class="portfolio__description">TITLE</div>
             </a>
 
             <!--Portfolio Item 4-->
             <a href="#" class="portfolio__item">
                 <img src="img/portfolio-item-4.png" alt="Portfolio image" class="portfolio__img">
+                <div class="portfolio__description">TITLE</div>
             </a>
             
             <!--Portfolio Item 5-->
             <a href="#" class="portfolio__item">
                 <img src="img/portfolio-item-5.png" alt="Portfolio image" class="portfolio__img">
+                <div class="portfolio__description">TITLE</div>
             </a>
 
             <!--Portfolio Item 6-->
             <a href="#" class="portfolio__item">
                 <img src="img/portfolio-item-6.png" alt="Portfolio image" class="portfolio__img">
+                <div class="portfolio__description">TITLE</div>
             </a>
         </div>
     </section>
