--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
 </head>
 <body>
     <header>
+        <!--
         <div class="logo">
             <img src="img/crockettlogo.png" alt="" width="300" height="auto">
-        </div>
-        <button class="nav-toggle" aria-label="toggle navigation">
-            <span class="hamburger"></span>
-        </button>
+        </div> 
+        -->
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
                 <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-                <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
     </header>
