write about me text and update intro subtitle text

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Crockett Ford</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">.NET dev and tinkerer</p>
+        <p class="section__subtitle section__subtitle--intro">.NET Enthusiast | Backend Bandit | Eternal Student</p>
         <img src="img/portrait-danielle-2022.jpg" alt="a picture of Crockett eating a sandwich" class="intro__img">
     </section>
 
@@ -137,12 +137,16 @@
     <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section_title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Stinkerator and destroyerator ready to terminator</p>
+        <p class="section__subtitle section__subtitle--about">Do they just let anybody make a website nowadays?</p>
 
         <div class="about-me__body">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ducimus rem exercitationem. Vel similique corporis, eius atque non dignissimos assumenda corrupti voluptates. Maxime commodi eaque, at nisi labore iste ratione.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi soluta atque unde iure rerum nostrum maiores, dolores fugiat aperiam quibusdam ex ipsum. Soluta ab tempora, reprehenderit asperiores tenetur quibusdam sit.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae facilis doloribus corporis sequi delectus perspiciatis, officia maiores quisquam at hic nam sit tempora, itaque eaque ad numquam, unde dolore tenetur.</p>
+            <p>I love databases! No, seriously. When I started this journey, I never expected to be so drawn to the nitty-gritty of making things work behnd the scenes. While I continue to work on my skills all-around--<em>this website represents the zenith of my visual design efforts so far</em>-- 
+                what I enjoy most is crafting boutique backend solutions for any use-case. 
+            </p>
+            <p>However, no matter my natural affinities, the thing that brought me to programming and what keeps me coming back is my love 
+                of learning and overcoming challenges. I've worked across multiple industries and none of them offer the kind of challenge, struggle, redemption and satisfaction that this one does. That's what brings me back every day, even as I work completely independently.
+            </p>
+            <p>I hope that if you feel similarly, you'll reach out via email or Twitter/X. I can't wait to hear from you!</p>
         </div>
 
         <img src="img/aboutme-image.jpg" alt="" class="about-me__img">
