small text change to about me

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <p class="section__subtitle section__subtitle--about">Do they just let anybody make a website nowadays?</p>
 
         <div class="about-me__body">
-            <p>I love databases! No, seriously. When I started this journey, I never expected to be so drawn to the nitty-gritty of making things work behnd the scenes. While I continue to work on my skills all-around--<em>this website represents the zenith of my visual design efforts so far</em>-- 
+            <p>I love databases! No, seriously. When I started this journey, I never expected to be so drawn to the nitty-gritty of making things work behnd the scenes. While I continue to work on my front-end skills--<em>this website represents the zenith of my visual design efforts so far</em>-- 
                 what I enjoy most is crafting boutique backend solutions for any use-case. 
             </p>
             <p>However, no matter my natural affinities, the thing that brought me to programming and what keeps me coming back is my love 
