changed portfolio subtitle

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- My Work -->
         <section class="my-work" id="work">
             <h2 class="section__title section__title--work">My work</h2>
-            <p class="section__subtitle section__subtitle--work">The projects I'm most proud of</p>
+            <p class="section__subtitle section__subtitle--work">A selection of recent projects</p>
         
             <div class="portfolio">
     
