--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <img src="img/sales-app.gif" alt="Portfolio image" class="portfolio__img">
                     <div class="portfolio__text">
                         <div class="portfolio__title">Sales Management App</div>
-                        <div class="portfolio__description">Using SQLite and EF core, track sales and display useful data in the console. Use case is a small online vintage designer clothes store. Uses .NET, EF Core, and SQLite.</div>
+                        <div class="portfolio__description">Using SQLite and EF core, track sales and display useful data in the console. Use case is a small online vintage designer clothes store.</div>
                     </div>
                     <a href="https://github.com/frockett/sales-tracking-app" target="_blank" class="portfolio__link"><i class="fa-brands fa-github"></i></a>
                 </div>
@@ -140,7 +140,7 @@
         <p class="section__subtitle section__subtitle--about">Do they just let anybody make a website nowadays?</p>
 
         <div class="about-me__body">
-            <p>I love databases! No, seriously. When I started this journey, I never expected to be so drawn to the nitty-gritty of making things work behnd the scenes. While I continue to work on my front-end skills--<em>this website represents the zenith of my visual design efforts so far</em>-- 
+            <p>I love databases! No, seriously. When I started this journey, I never expected to be so drawn to the nitty-gritty of making things work behind the scenes. While I continue to work on my front-end skills--<em>this website represents the zenith of my visual design efforts so far</em>-- 
                 what I enjoy most is crafting boutique backend solutions for any use-case. 
             </p>
             <p>However, no matter my natural affinities, the thing that brought me to programming and what keeps me coming back is my love 
