--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
                 <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                <li class="nav__item"><a href="assets/Resume-Crockett-Ford.pdf" class="nav__link">Resume</a></li>
+                <li class="nav__item"><a href="assets/Resume-Crockett-Ford.pdf" target="_blank" class="nav__link">Resume</a></li>
             </ul>
         </nav>
     </header>
